# incubator_rs

./: Cargo.toml  README.md
1_concepts/: Cargo.toml
1_concepts/1_4_cow/: Cargo.toml
1_concepts/1_5_convert_cast_deref/: Cargo.toml
1_concepts/1_9_phantom/: Cargo.toml
1_concepts/src/: main.rs
2_idioms/src/: main.rs
3_ecosystem/: Cargo.toml
3_ecosystem/3_10_threads/: Cargo.toml
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_12_web_db/: Cargo.toml  mydb.db
3_ecosystem/3_12_web_db/migrations/2020-05-28-111711_initial/: down.sql  up.sql
3_ecosystem/3_12_web_db/src/: main.rs  schema.rs
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/src/: main.rs
3_ecosystem/3_3_date_time/: Cargo.toml
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: main.rs
3_ecosystem/3_5_collections/: Cargo.toml
3_ecosystem/3_5_collections/src/: main.rs
3_ecosystem/3_6_serde/: Cargo.toml
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml
3_ecosystem/3_9_cmd_env_conf/src/: main.rs
3_ecosystem/migrations/2020-06-01-110945_create_users/: down.sql  up.sql
3_ecosystem/src/: main.rs  models.rs  schema.rs
btmap_macro/: Cargo.toml
btmap_macro/src/: lib.rs
proc_btmap/: Cargo.toml
(+14 files in other folders)
