[package]
name = "3"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
rust-argon2 = "0.8"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
juniper = "0.14.2"
serde = "1.0.111"
serde_json = "1.0.53"
serde_derive = "1.0.111"
r2d2 = "0.8.8"
uuid = {version = "0.8.1", features = ["v4", "serde"] }
base64 = "0.12"
